kubernetes/gatekeeper/constraints/require-non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNonRoot
metadata:
  name: require-non-root
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds:    ["Deployment"]
    excludedNamespaces:
      - kube-system
      - monitoring
  enforcementAction: deny
