kubernetes/gatekeeper/constraints/require-resource-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireResourceLimits
metadata:
  name: require-resource-limits
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds:    ["Deployment", "DaemonSet", "StatefulSet"]
    excludedNamespaces:
      - kube-system
  enforcementAction: deny
